Update CORS configuration to allow requests from workwave-0z0i.onrender.com